# aws-lc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
config/: config.h  test_data.bzl
util/: BUILD.bazel  embed_test_data.go
