load("@rules_go//go:def.bzl", "go_binary")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "util.bzl",
    "embed_test_data.go",
])

go_binary(
    name = "embed_test_data",
    srcs = ["embed_test_data.go"],
    importpath = "embed_test_data",
)

run_binary(
    name = "crypto_test_data",
    tool = ":embed_test_data",
    srcs = [
        "//:crypto_test_data_files",
        "//:crypto_test_data_list",
    ],
    outs = [":crypto_test_data.cc"],
    args = [
        "-out",
        "$(location :crypto_test_data.cc)",
        "-file-list",
        "$(location //:crypto_test_data_list)",
    ],
)
